--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^6.0.1",
     "passport": "^0.4.1",
     "passport-reddit": "^0.2.4",
     "snoowrap": "^1.20.1"
@@ -29,7 +29,8 @@
     "body-parser": "^1.19.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0"
+    "eslint-plugin-react": "^7.17.0",
+    "yarn-audit-fix": "^6.4.1"
   },
   "proxy": "http://localhost:3000/"
 }
