--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +32,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001/"
+  "proxy": "http://localhost:3001/",
+  "devDependencies": {
+    "yarn-audit-fix": "^6.4.1"
+  },
+  "resolutions": {
+    "browserslist": "4.16.5",
+    "glob-parent": "5.1.2"
+  }
 }
